<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ArtigoRegisterActivicty">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="389dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="Cadastro de Novo Artigo"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="40dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp">

        <EditText
            android:id="@+id/etNomeComercial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nome_comercial"
            android:inputType="text" />

        <EditText
            android:id="@+id/etNomeCientifico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nome_cientifico"
            android:inputType="text" />

        <EditText
            android:id="@+id/etId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_prod_id"
            android:inputType="number" />

        <!--TextEdit
            android:id="@+id/etDataFabrico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_data_fabri"
            android:inputType="date" />

        <TextEdit
            android:id="@+id/etDataValidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_data_validade"
            android:inputType="date" /-->
        <EditText
            android:id="@+id/etPreco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_prod_preco"
            android:inputType="numberDecimal
" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data/Fabríco" />

        <DatePicker
            android:id="@+id/etDataFabrico"
            android:layout_width="match_parent"
            android:layout_height="122dp"

            android:calendarViewShown="false"
            android:datePickerMode="spinner"

            android:ems="1"
            android:hint="@string/hint_data_fabri"
            android:scrollbarSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data/Validade" />

        <DatePicker
            android:id="@+id/etDataValidade"
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"

            android:ems="1"
            android:hint="@string/hint_data_validade"
            android:inputType="date" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="46dp">

            <Button
                android:id="@+id/btGravar"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:text="Gravar Alteração" />

            <ImageButton
                android:id="@+id/btDelete"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="106dp"
                android:layout_marginEnd="52dp"
                android:layout_toEndOf="@+id/btGravar"
                android:background="@null"
                android:src="@mipmap/delet"
                android:text="Apagar" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>